# Voice-Forge

./: Cargo.toml  README.md
.cargo/: config.toml
src/: app.rs  autostart.rs  config.rs  controller.rs  icon.rs  logging.rs  main.rs  secrets.rs  tray.rs
src/audio/: capture.rs  mod.rs
src/hotkey/: mod.rs  windows.rs
src/inject/: mod.rs  windows.rs
src/stt/: deepgram.rs  mock.rs  mod.rs  model.rs  openai.rs  whisper.rs
src/ui/: mod.rs
website/: index.html
website/css/: styles.css
website/js/: main.js  three-hero.js
